Fix CSS build and path issues

--- a/src/input.css
+++ b/src/input.css
@@ -7,10 +7,10 @@
 
 :root {
   --main-blue: #003253;
-  --homebuying-bg: url('./mediafiles/Home page/Counter number/bg01/bg02.png');
+  --homebuying-bg: url('./mediaFiles/Home page/Counter number/bg01/bg02.png');
   --assistance-decorative-bg: url('./mediaFiles/Home page/Counter number/assistance_bg_decorative.png');
   --Pinnacle-in-Numbers-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
-  --The-Pride-Mohali-bg: url('./mediafiles/Home page/Counter number/ThePrideMohali.webp');
+  --The-Pride-Mohali-bg: url('./mediaFiles/Home page/Counter number/ThePrideMohali.webp');
   --Crafted-for-Top-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
   --signature_residance-r-BG: url('./mediaFiles/Home page/Counter number/signature_residence_mBG.png');
   --paper-crashes-BG: url('./mediaFiles/Home page/Counter number/slider 01145/template.png');
