--- a/src/output.css
+++ b/src/output.css
@@ -32,7 +32,6 @@
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
     --leading-snug: 1.375;
-    --radius-md: 0.375rem;
     --radius-3xl: 1.5rem;
     --radius-4xl: 2rem;
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
@@ -228,9 +227,6 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-1 {
-    top: calc(var(--spacing) * 1);
-  }
   .top-1\/2 {
     top: calc(1/2 * 100%);
   }
@@ -263,9 +259,6 @@
   }
   .right-0 {
     right: calc(var(--spacing) * 0);
-  }
-  .right-1 {
-    right: calc(var(--spacing) * 1);
   }
   .right-1\/2 {
     right: calc(1/2 * 100%);
@@ -347,9 +340,6 @@
   }
   .left-0 {
     left: calc(var(--spacing) * 0);
-  }
-  .left-1 {
-    left: calc(var(--spacing) * 1);
   }
   .left-1\/2 {
     left: calc(1/2 * 100%);
@@ -462,14 +452,8 @@
   .mt-\[20px\] {
     margin-top: 20px;
   }
-  .mt-\[30px\] {
-    margin-top: 30px;
-  }
   .mt-\[48px\] {
     margin-top: 48px;
-  }
-  .mt-\[50px\] {
-    margin-top: 50px;
   }
   .mt-\[68\.32px\] {
     margin-top: 68.32px;
@@ -477,14 +461,8 @@
   .mt-\[80px\] {
     margin-top: 80px;
   }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
-  }
   .mb-6 {
     margin-bottom: calc(var(--spacing) * 6);
-  }
-  .mb-\[3px\] {
-    margin-bottom: 3px;
   }
   .mb-\[70px\] {
     margin-bottom: 70px;
@@ -536,9 +514,6 @@
   }
   .h-0 {
     height: calc(var(--spacing) * 0);
-  }
-  .h-4 {
-    height: calc(var(--spacing) * 4);
   }
   .h-4\/5 {
     height: calc(4/5 * 100%);
@@ -774,9 +749,6 @@
   .h-\[49\.3px\] {
     height: 49.3px;
   }
-  .h-\[50\%\] {
-    height: 50%;
-  }
   .h-\[51\.53px\] {
     height: 51.53px;
   }
@@ -857,9 +829,6 @@
   }
   .h-\[92\.7px\] {
     height: 92.7px;
-  }
-  .h-\[100\%\] {
-    height: 100%;
   }
   .h-\[100px\] {
     height: 100px;
@@ -987,9 +956,6 @@
   .h-max {
     height: max-content;
   }
-  .h-screen {
-    height: 100vh;
-  }
   .max-h-\[140px\] {
     max-height: 140px;
   }
@@ -1007,9 +973,6 @@
   }
   .min-h-\[385\.77px\] {
     min-height: 385.77px;
-  }
-  .min-h-screen {
-    min-height: 100vh;
   }
   .\!w-\[178\.55px\] {
     width: 178.55px !important;
@@ -1272,14 +1235,8 @@
   .w-\[112\.63px\] {
     width: 112.63px;
   }
-  .w-\[114\.9px\] {
-    width: 114.9px;
-  }
   .w-\[114\.9082px\] {
     width: 114.9082px;
-  }
-  .w-\[114px\] {
-    width: 114px;
   }
   .w-\[117px\] {
     width: 117px;
@@ -1376,9 +1333,6 @@
   }
   .w-\[350\.68px\] {
     width: 350.68px;
-  }
-  .w-\[350px\] {
-    width: 350px;
   }
   .w-\[356\.8px\] {
     width: 356.8px;
@@ -1512,17 +1466,11 @@
   .flex-1 {
     flex: 1;
   }
-  .flex-shrink {
-    flex-shrink: 1;
-  }
   .flex-shrink-0 {
     flex-shrink: 0;
   }
   .shrink-0 {
     flex-shrink: 0;
-  }
-  .flex-grow {
-    flex-grow: 1;
   }
   .grow {
     flex-grow: 1;
@@ -1530,22 +1478,9 @@
   .grow-\[1\] {
     flex-grow: 1;
   }
-  .border-collapse {
-    border-collapse: collapse;
-  }
-  .-translate-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
-    --tw-translate-y: calc(var(--spacing) * 1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-1\/2 {
@@ -1553,32 +1488,16 @@
     --tw-translate-y: calc(1/2 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-x-1\/2 {
     --tw-translate-x: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-x-1 {
-    --tw-translate-x: calc(var(--spacing) * 1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .translate-x-1\/2 {
     --tw-translate-x: calc(1/2 * 100%);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
-  .-translate-y-1 {
-    --tw-translate-y: calc(var(--spacing) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
   .-translate-y-1\/2 {
     --tw-translate-y: calc(calc(1/2 * 100%) * -1);
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .-translate-y-\[0\%\] {
-    --tw-translate-y: calc(0% * -1);
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .-translate-y-\[110\%\] {
@@ -1587,10 +1506,6 @@
   }
   .translate-y-\[-100\%\] {
     --tw-translate-y: -100%;
-    translate: var(--tw-translate-x) var(--tw-translate-y);
-  }
-  .translate-y-\[0\] {
-    --tw-translate-y: 0;
     translate: var(--tw-translate-x) var(--tw-translate-y);
   }
   .scale-0 {
@@ -1621,9 +1536,6 @@
   .cursor-pointer {
     cursor: pointer;
   }
-  .resize {
-    resize: both;
-  }
   .list-disc {
     list-style-type: disc;
   }
@@ -1641,18 +1553,6 @@
   }
   .grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
-  }
-  .grid-cols-\[1fr\,auto\] {
-    grid-template-columns: 1fr,auto;
-  }
-  .grid-cols-\[40\%_60\%\] {
-    grid-template-columns: 40% 60%;
-  }
-  .grid-cols-\[auto\,auto\] {
-    grid-template-columns: auto,auto;
-  }
-  .grid-cols-\[auto_auto\] {
-    grid-template-columns: auto auto;
   }
   .flex-col {
     flex-direction: column;
@@ -1678,9 +1578,6 @@
   .items-start {
     align-items: flex-start;
   }
-  .items-stretch {
-    align-items: stretch;
-  }
   .justify-between {
     justify-content: space-between;
   }
@@ -1692,9 +1589,6 @@
   }
   .justify-start {
     justify-content: flex-start;
-  }
-  .justify-items-center {
-    justify-items: center;
   }
   .gap-0 {
     gap: calc(var(--spacing) * 0);
@@ -2124,9 +2018,6 @@
   .rounded-full {
     border-radius: calc(infinity * 1px);
   }
-  .rounded-md {
-    border-radius: var(--radius-md);
-  }
   .rounded-none {
     border-radius: 0;
   }
@@ -2286,9 +2177,6 @@
   .border-l-\[\#876025\] {
     border-left-color: #876025;
   }
-  .\!bg-\[\#003253\] {
-    background-color: #003253 !important;
-  }
   .bg-\[\#3E6A19\] {
     background-color: #3E6A19;
   }
@@ -2387,9 +2275,6 @@
   }
   .bg-\[var\(--main-blue\)\] {
     background-color: var(--main-blue);
-  }
-  .bg-black {
-    background-color: var(--color-black);
   }
   .bg-black\/20 {
     background-color: color-mix(in srgb, #000 20%, transparent);
@@ -2679,9 +2564,6 @@
   .py-\[3\.5px\] {
     padding-block: 3.5px;
   }
-  .py-\[3\.69px\] {
-    padding-block: 3.69px;
-  }
   .py-\[4\.86px\] {
     padding-block: 4.86px;
   }
@@ -2817,12 +2699,6 @@
   .py-\[90px\] {
     padding-block: 90px;
   }
-  .py-\[100px\] {
-    padding-block: 100px;
-  }
-  .py-\[104px\] {
-    padding-block: 104px;
-  }
   .ps-\[13px\] {
     padding-inline-start: 13px;
   }
@@ -2840,9 +2716,6 @@
   }
   .pt-\[9\.11px\] {
     padding-top: 9.11px;
-  }
-  .pt-\[13\.64px\] {
-    padding-top: 13.64px;
   }
   .pt-\[17\.14px\] {
     padding-top: 17.14px;
@@ -3343,9 +3216,6 @@
   .text-nowrap {
     text-wrap: nowrap;
   }
-  .text-wrap {
-    text-wrap: wrap;
-  }
   .whitespace-nowrap {
     white-space: nowrap;
   }
@@ -3375,9 +3245,6 @@
   }
   .text-\[\#514E4E\] {
     color: #514E4E;
-  }
-  .text-\[\#888\] {
-    color: #888;
   }
   .text-\[\#003253\] {
     color: #003253;
@@ -3475,17 +3342,9 @@
     --tw-shadow: 0 10px 15px -3px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 4px 6px -4px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
   }
-  .shadow-md {
-    --tw-shadow: 0 4px 6px -1px var(--tw-shadow-color, rgb(0 0 0 / 0.1)), 0 2px 4px -2px var(--tw-shadow-color, rgb(0 0 0 / 0.1));
-    box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
   .ring {
     --tw-ring-shadow: var(--tw-ring-inset,) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color, currentcolor);
     box-shadow: var(--tw-inset-shadow), var(--tw-inset-ring-shadow), var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  }
-  .outline {
-    outline-style: var(--tw-outline-style);
-    outline-width: 1px;
   }
   .backdrop-blur-\[4px\] {
     --tw-backdrop-blur: blur(4px);
@@ -3506,15 +3365,6 @@
     --tw-backdrop-blur: blur(var(--blur-sm));
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .backdrop-filter {
-    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
-  }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .transition-all {
     transition-property: all;
@@ -3660,13 +3510,6 @@
     &:hover {
       @media (hover: hover) {
         color: #003253;
-      }
-    }
-  }
-  .hover\:text-\[003253\] {
-    &:hover {
-      @media (hover: hover) {
-        color: 003253;
       }
     }
   }
@@ -3938,11 +3781,6 @@
   .sm\:grid-cols-3 {
     @media (width >= 40rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
-    }
-  }
-  .sm\:grid-cols-4 {
-    @media (width >= 40rem) {
-      grid-template-columns: repeat(4, minmax(0, 1fr));
     }
   }
   .sm\:items-center {
@@ -4548,11 +4386,6 @@
   .md\:px-\[40px\] {
     @media (width >= 48rem) {
       padding-inline: 40px;
-    }
-  }
-  .md\:px-\[50px\] {
-    @media (width >= 48rem) {
-      padding-inline: 50px;
     }
   }
   .md\:px-\[90px\] {
@@ -5411,10 +5244,10 @@
 }
 :root {
   --main-blue: #003253;
-  --homebuying-bg: url('./mediafiles/Home page/Counter number/bg01/bg02.png');
+  --homebuying-bg: url('./mediaFiles/Home page/Counter number/bg01/bg02.png');
   --assistance-decorative-bg: url('./mediaFiles/Home page/Counter number/assistance_bg_decorative.png');
   --Pinnacle-in-Numbers-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
-  --The-Pride-Mohali-bg: url('./mediafiles/Home page/Counter number/ThePrideMohali.webp');
+  --The-Pride-Mohali-bg: url('./mediaFiles/Home page/Counter number/ThePrideMohali.webp');
   --Crafted-for-Top-bg: url('./mediaFiles/Home page/Counter number/bg01/bg 01.png');
   --signature_residance-r-BG: url('./mediaFiles/Home page/Counter number/signature_residence_mBG.png');
   --paper-crashes-BG: url('./mediaFiles/Home page/Counter number/slider 01145/template.png');
@@ -5785,11 +5618,6 @@ body {
   inherits: false;
   initial-value: 0 0 #0000;
 }
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @property --tw-backdrop-blur {
   syntax: "*";
   inherits: false;
@@ -5878,7 +5706,6 @@ body {
       --tw-ring-offset-width: 0px;
       --tw-ring-offset-color: #fff;
       --tw-ring-offset-shadow: 0 0 #0000;
-      --tw-outline-style: solid;
       --tw-backdrop-blur: initial;
       --tw-backdrop-brightness: initial;
       --tw-backdrop-contrast: initial;
