--- a/src/output.css
+++ b/src/output.css
@@ -1593,6 +1593,9 @@
   .grid-cols-7 {
     grid-template-columns: repeat(7, minmax(0, 1fr));
   }
+  .grid-cols-\[auto\] {
+    grid-template-columns: auto;
+  }
   .flex-col {
     flex-direction: column;
   }
