improve pinnacle swiper

--- a/src/output.css
+++ b/src/output.css
@@ -2566,6 +2566,12 @@
   .px-\[27\.59px\] {
     padding-inline: 27.59px;
   }
+  .px-\[27\.62px\] {
+    padding-inline: 27.62px;
+  }
+  .px-\[27px\] {
+    padding-inline: 27px;
+  }
   .px-\[30px\] {
     padding-inline: 30px;
   }
