--- a/src/output.css
+++ b/src/output.css
@@ -2311,6 +2311,9 @@
   .bg-\[\#FFFFFF\] {
     background-color: #FFFFFF;
   }
+  .bg-\[cover_500\%\] {
+    background-color: cover 500%;
+  }
   .bg-\[var\(--main-blue\)\] {
     background-color: var(--main-blue);
   }
@@ -2349,6 +2352,10 @@
   }
   .bg-gradient-to-b {
     --tw-gradient-position: to bottom in oklab;
+    background-image: linear-gradient(var(--tw-gradient-stops));
+  }
+  .bg-gradient-to-r {
+    --tw-gradient-position: to right in oklab;
     background-image: linear-gradient(var(--tw-gradient-stops));
   }
   .bg-\[linear-gradient\(180deg\,\#FFC267_0\%\,\#99753E_100\%\)\] {
@@ -2391,9 +2398,57 @@
     --tw-gradient-from: #FFC267;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
   }
+  .from-black {
+    --tw-gradient-from: var(--color-black);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .from-black\/60 {
+    --tw-gradient-from: color-mix(in srgb, #000 60%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-gradient-from: color-mix(in oklab, var(--color-black) 60%, transparent);
+    }
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .via-transparent {
+    --tw-gradient-via: transparent;
+    --tw-gradient-via-stops: var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-via) var(--tw-gradient-via-position), var(--tw-gradient-to) var(--tw-gradient-to-position);
+    --tw-gradient-stops: var(--tw-gradient-via-stops);
+  }
   .to-\[\#99753E\] {
     --tw-gradient-to: #99753E;
     --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-black {
+    --tw-gradient-to: var(--color-black);
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .to-black\/60 {
+    --tw-gradient-to: color-mix(in srgb, #000 60%, transparent);
+    @supports (color: color-mix(in lab, red, red)) {
+      --tw-gradient-to: color-mix(in oklab, var(--color-black) 60%, transparent);
+    }
+    --tw-gradient-stops: var(--tw-gradient-via-stops, var(--tw-gradient-position), var(--tw-gradient-from) var(--tw-gradient-from-position), var(--tw-gradient-to) var(--tw-gradient-to-position));
+  }
+  .bg-\[auto_200\%\] {
+    background-size: auto 200%;
+  }
+  .bg-\[auto_250\%\] {
+    background-size: auto 250%;
+  }
+  .bg-\[auto_300\%\] {
+    background-size: auto 300%;
+  }
+  .bg-\[auto_400\%\] {
+    background-size: auto 400%;
+  }
+  .bg-\[auto_500\%\] {
+    background-size: auto 500%;
+  }
+  .bg-\[length\:200\%_500\%\] {
+    background-size: 200% 500%;
+  }
+  .bg-auto {
+    background-size: auto;
   }
   .bg-cover {
     background-size: cover;
@@ -2404,11 +2459,26 @@
   .bg-clip-text {
     background-clip: text;
   }
+  .\!bg-\[200\%_500\%\] {
+    background-position: 200% 500% !important;
+  }
+  .bg-\[100\%_300\%\] {
+    background-position: 100% 300%;
+  }
+  .bg-\[100\%_500\%\] {
+    background-position: 100% 500%;
+  }
+  .bg-\[200\%_500\%\] {
+    background-position: 200% 500%;
+  }
   .bg-\[right_-230px_center\] {
     background-position: right -230px center;
   }
   .bg-center {
     background-position: center;
+  }
+  .bg-top {
+    background-position: top;
   }
   .bg-no-repeat {
     background-repeat: no-repeat;
@@ -3850,6 +3920,11 @@
       justify-content: center;
     }
   }
+  .sm\:justify-start {
+    @media (width >= 40rem) {
+      justify-content: flex-start;
+    }
+  }
   .sm\:gap-0 {
     @media (width >= 40rem) {
       gap: calc(var(--spacing) * 0);
@@ -3889,6 +3964,11 @@
   .sm\:bg-\[url\(\'\.\/mediaFiles\/Price\/bg-frame\.svg\'\)\] {
     @media (width >= 40rem) {
       background-image: url('./mediaFiles/Price/bg-frame.svg');
+    }
+  }
+  .sm\:bg-\[length\:200\%_500\%\] {
+    @media (width >= 40rem) {
+      background-size: 200% 500%;
     }
   }
   .sm\:bg-center {
@@ -4449,6 +4529,11 @@
   .md\:py-\[12px\] {
     @media (width >= 48rem) {
       padding-block: 12px;
+    }
+  }
+  .md\:py-\[50px\] {
+    @media (width >= 48rem) {
+      padding-block: 50px;
     }
   }
   .md\:py-\[76px\] {
